tests/errors/for-each_requires_a_List.b
fn main() {
    x := 42;

    for i in x {
        print(i);
    }
}
